# disturbance-tracker

./: .builder  .gitignore  .mkdocs.yml  404.html  Makefile  README.rst  example_config.json  example_config.yml  index.html  pyproject.toml  requirements.txt  search.html
.github/workflows/: publish.yml  tests.yml
ai/: __init__.py  inspect.py  model.py  nnet.py  options.py  train.py
apr/: __init__.py  __main__.py  common.py  config.py  options.py
apr/core/: __init__.py
apr/inspect/: __init__.py  filenav.py  gui.py  menu.py  review.py
apr/model/: nnet.py  train.py
apr/monitor/: __init__.py  daemon.py  signals.py
docs/: CNAME  conf.py  index.rst
docs/intro/: configure.rst  hardware.rst  install.rst  troubleshooting.rst  usage.rst
search/: search_index.json
setup/configure/: index.html
setup/hardware/: index.html
setup/install/: index.html
setup/options/: index.html
src/: flags.go  flags_test.go  go.mod  main.go
src/common/: logging.go  logging_test.go  utils.go  utils_test.go
src/daemon/: daemon.go  daemon_test.go  ffmpeg.go  scanner.go
src/ffmpeg/: ffmpeg.go  ffmpeg_test.go
src/log/: log.go  log_test.go
src/model/: dsp.go  model.go  model_test.go  test_model.labels  test_model_labels.json
src/review/: action.go  headless.go  main.go  menu.go  review.go  status.go
src/state/: config.go  config_test.go
tests/: conftest.py  test_null.py
usage/collect/: index.html
usage/inspect/: index.html
usage/overview/: index.html
usage/report/: index.html
usage/review/: index.html
usage/train/: index.html
